[package]
name = "webpage-cli"
version = "0.1.0"
description = "Interrogate web pages for information"
authors = ["Shane Witbeck <shane@digitalsanctum.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/digitalsanctum/webpage-cli"
repository = "https://github.com/digitalsanctum/webpage-cli"
keywords = ["webpage", "webpage-cli", "html", "http", "opengraph"]
categories = ["command-line-utilities", "web-programming::http-client", "development-tools"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3", features = ["derive", "env"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
webpage = { version ="1", features = ["serde"] }