[package]
name = "webpage-cli"
version = "2.0.0"
description = "Interrogate web pages for information"
authors = ["Shane Witbeck <shane@digitalsanctum.com>"]
edition = "2021"
rust-version = "1.65.0"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/digitalsanctum/webpage-cli"
repository = "https://github.com/digitalsanctum/webpage-cli"
keywords = ["webpage", "webpage-cli", "html", "http", "opengraph"]
categories = ["command-line-utilities", "web-programming::http-client", "development-tools"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.19"
clap = { version = "4", features = ["derive", "env"] }
playwright = "0.0.20"
serde = "1"
serde_derive = "1"
serde_json = "1"
slugify = "0.1.0"
tokio = { version = "1", features = ["full"] }
url = "2.4.0"
webpage = { version = "2.0.0", features = ["serde"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary. Note: causes 'cargo bloat' not to work.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
